[package]
name = "qwiic-lcd-rs"
description = "This library aims at controlling QwiicLCD screens using I2C from Linux."
version = "0.1.1"
authors = ["Caleb Mitchell Smith-Woolrich <calebsmithwoolrich@gmail.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/qwiic-lcd-rs"

[dependencies]
i2cdev = "0.4.4"
enum_primitive = "0.1.1"
